<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_black_fon"
    tools:context=".fragments.settings.SettingsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:text="@string/language"
        android:textColor="@color/background_item"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/english"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ic_settings_fon_button"
            android:gravity="center"
            android:orientation="vertical"
            android:text="@string/english"
            android:textColor="#2B2E3D"
            android:textSize="22dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/russian"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ic_settings_fon_button"
            android:gravity="center"
            android:orientation="vertical"
            android:text="@string/russian"
            android:textColor="#2B2E3D"
            android:textSize="22dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/uzbek"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/ic_settings_fon_button"
            android:gravity="center"
            android:orientation="vertical"
            android:text="@string/o_zbek"
            android:textColor="#2B2E3D"
            android:textSize="22dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/qoraqalpoq"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_settings_fon_button"
            android:gravity="center"
            android:orientation="vertical"
            android:text="@string/qoraqalpoq"
            android:textColor="#2B2E3D"
            android:textSize="22dp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>